Test/traits/NonReferenceTraits.dfy.expect
NonReferenceTraits.dfy(52,8): Error: mutable fields are allowed only in reference types (consider declaring the field as a 'const')
NonReferenceTraits.dfy(56,8): Error: mutable fields are allowed only in reference types (consider declaring the field as a 'const')
NonReferenceTraits.dfy(59,8): Error: mutable fields are allowed only in reference types (consider declaring the field as a 'const')
3 resolution/type errors detected in NonReferenceTraits.dfy
NonReferenceTraits.dfy(28,14): Error: module 'M' does not declare a type 'MX?'
NonReferenceTraits.dfy(32,11): Error: Type or type parameter is not declared in this scope: Z? (did you forget to qualify a name or declare a module import 'opened'? names in outer modules are not visible in nested modules)
NonReferenceTraits.dfy(33,11): Error: Type or type parameter is not declared in this scope: Q? (did you forget to qualify a name or declare a module import 'opened'? names in outer modules are not visible in nested modules)
NonReferenceTraits.dfy(39,11): Error: Type or type parameter is not declared in this scope: E? (did you forget to qualify a name or declare a module import 'opened'? names in outer modules are not visible in nested modules)
NonReferenceTraits.dfy(52,8): Error: mutable fields are allowed only in reference types (consider declaring the field as a 'const')
NonReferenceTraits.dfy(56,8): Error: mutable fields are allowed only in reference types (consider declaring the field as a 'const')
NonReferenceTraits.dfy(59,8): Error: mutable fields are allowed only in reference types (consider declaring the field as a 'const')
NonReferenceTraits.dfy(65,8): Error: mutable fields are allowed only in reference types (consider declaring the field as a 'const' or declaring the trait with 'extends object')
8 resolution/type errors detected in NonReferenceTraits.dfy
